hack/e2e/manifests/network_policy_to_access_prometheus.yaml
# Allow obs-mcp to access Prometheus
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-obs-mcp-to-prometheus
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/instance: k8s
      app.kubernetes.io/name: prometheus
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: obs-mcp
      ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 8080
